--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+}
+.heading {
+  font-size: 3rem;
+  padding: 12px;
+  text-align: center;
+}
+.button {
+  background-color: rgb(66, 66, 255);
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 5px 10px;
+  border-radius: 6px;
+}
+.btn-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: 'row';
+}
+.btn-txt {
   color: white;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #0a0ada;
+  box-shadow: 20px;
+}
+.content {
+  min-height: 100vh;
+  background-color: #fefefe;
+  padding: 20px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-title {
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+/*table*/
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+
+}
+th {
+  background-color: #f9f9f9;
+  padding: 10px;
+  text-align: left;
+  font-size: large;
+  font-weight: 600;
+}
+th:first-child{
+    text-align: center;
+}
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+tr:nth-child(odd) {
+  background-color: #ffffff;
+}
+.action-col{
+    display: flex;
+    flex-direction: row;
+}
+td {
+  padding: 10px;
+  font-size: medium;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td:first-child {
+  text-align: center;
 }
+@media screen and (max-width: 600px) {
+    table {
+      border: 0;
+    }
+    table thead {
+      display: none;
+    }
+    table tr {
+      border-bottom: 3px solid #ddd;
+      margin-bottom: 12px;
+      display: block;
+    }
+    table td {
+      border-bottom: 1px solid #ddd;
+      font-size: 0.8em;
+      text-align: left;
+      display: block;
+    }
+}
+
+
+/* React Modal */
+.ReactModal-Overlay {
+    background-color: rgba(0, 0, 0, 0.75) !important;
+  }
+  
+  .ReactModal-Content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    overflow: auto;
+    border-radius: 8px;
+    outline: none;
+    padding: 20px;
+    width: 90%;
+    max-width: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  @media (max-width: 600px) {
+    .ReactModal-Content {
+      width: 80%;
+      max-width: none;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .ReactModal-Content {
+      width: 95%;
+      padding: 15px;
+    }
+  }
